--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-image": "^1.4.0",
     "gatsby-plugin-sharp": "^3.4.0",
     "gatsby-source-filesystem": "^3.4.0",
+    "gatsby-source-strapi": "^1.0.0-alpha.1",
     "gatsby-transformer-sharp": "^3.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
