--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "gatsby-plugin-image": "^1.4.0",
     "gatsby-plugin-react-helmet": "^4.4.0",
     "gatsby-plugin-sharp": "^3.4.0",
-    "gatsby-plugin-webfonts": "^2.1.0",
+    "gatsby-plugin-webfonts": "^2.1.1",
     "gatsby-source-filesystem": "^3.4.0",
     "gatsby-source-strapi": "^1.0.0-alpha.1",
     "gatsby-transformer-sharp": "^3.4.0",
@@ -26,6 +26,8 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
+    "react-transition-group": "^4.4.2",
+    "scrollreveal": "^4.0.9",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
