--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.13.2",
     "gatsby": "^3.4.0",
     "gatsby-plugin-image": "^1.4.0",
     "gatsby-plugin-react-helmet": "^4.4.0",
     "gatsby-plugin-sharp": "^3.4.0",
+    "gatsby-plugin-styled-components": "^4.14.0",
     "gatsby-plugin-webfonts": "^2.1.1",
     "gatsby-source-filesystem": "^3.4.0",
     "gatsby-source-strapi": "^1.0.0-alpha.1",
