--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
+    "react-spring": "^9.3.0",
     "react-transition-group": "^4.4.2",
     "scrollreveal": "^4.0.9",
     "styled-components": "^5.3.1"
