--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-styled-components": "^1.13.2",
     "gatsby": "^3.4.0",
     "gatsby-plugin-image": "^1.4.0",
+    "gatsby-plugin-manifest": "^3.14.0",
     "gatsby-plugin-react-helmet": "^4.4.0",
     "gatsby-plugin-sharp": "^3.4.0",
     "gatsby-plugin-sitemap": "^4.10.0",
